prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-sawtooth
  labels:
    app: monitoring-sawtooth
spec:
  selector:
    matchLabels:
      app: monitoring-sawtooth
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: monitoring-sawtooth
    spec:
      containers:
      - name: monitoring-sawtooth
        image: registry.gitlab.com/bkblockchain/bksupplychain/platform/monitoring-dashboard:e70700e6
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
