prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  monitoring-sawtooth
spec:
    type: NodePort
    selector:
        app: monitoring-sawtooth
    ports:
        - port: 5000
          targetPort: 5000
          protocol: TCP
